// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should change route to create profile 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Choose from an existing Profile below or create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="Jane Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                          title="Jane Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JA
                        </span>
                      </div>
                      <span
                        class="Badge__Wrapper-sc-1d7juq8-0 bsbEur flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 bg-theme-background border-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        <div
                          class="sc-bdfBwQ iwcOAK"
                          height="18"
                          width="13"
                        >
                          <svg>
                            lock.svg
                          </svg>
                        </div>
                        <span />
                      </span>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      Jane Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should navigate to profile dashboard 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Choose from an existing Profile below or create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="John Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="John Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      John Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="Jane Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                          title="Jane Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JA
                        </span>
                      </div>
                      <span
                        class="Badge__Wrapper-sc-1d7juq8-0 bsbEur flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 bg-theme-background border-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        <div
                          class="sc-bdfBwQ iwcOAK"
                          height="18"
                          width="13"
                        >
                          <svg>
                            lock.svg
                          </svg>
                        </div>
                        <span />
                      </span>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      Jane Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should navigate to profile dashboard with correct password 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Choose from an existing Profile below or create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="John Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="John Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      John Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="Jane Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                          title="Jane Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JA
                        </span>
                      </div>
                      <span
                        class="Badge__Wrapper-sc-1d7juq8-0 bsbEur flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 bg-theme-background border-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        <div
                          class="sc-bdfBwQ iwcOAK"
                          height="18"
                          width="13"
                        >
                          <svg>
                            lock.svg
                          </svg>
                        </div>
                        <span />
                      </span>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      Jane Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should navigate to profile settings from profile card menu 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Choose from an existing Profile below or create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="John Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="John Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      John Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="Jane Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                          title="Jane Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JA
                        </span>
                      </div>
                      <span
                        class="Badge__Wrapper-sc-1d7juq8-0 bsbEur flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 bg-theme-background border-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        <div
                          class="sc-bdfBwQ iwcOAK"
                          height="18"
                          width="13"
                        >
                          <svg>
                            lock.svg
                          </svg>
                        </div>
                        <span />
                      </span>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      Jane Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should navigate to profile settings with correct password 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Choose from an existing Profile below or create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="John Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="John Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      John Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="Jane Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                          title="Jane Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JA
                        </span>
                      </div>
                      <span
                        class="Badge__Wrapper-sc-1d7juq8-0 bsbEur flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 bg-theme-background border-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        <div
                          class="sc-bdfBwQ iwcOAK"
                          height="18"
                          width="13"
                        >
                          <svg>
                            lock.svg
                          </svg>
                        </div>
                        <span />
                      </span>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      Jane Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render with profiles 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Choose from an existing Profile below or create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="John Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="John Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      John Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
                        data-testid="ProfileAvatar__svg"
                      >
                        <img
                          alt="Jane Doe"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                          title="Jane Doe"
                        />
                        <span
                          class="absolute font-semibold text-white"
                        >
                          JA
                        </span>
                      </div>
                      <span
                        class="Badge__Wrapper-sc-1d7juq8-0 bsbEur flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 bg-theme-background border-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        <div
                          class="sc-bdfBwQ iwcOAK"
                          height="18"
                          width="13"
                        >
                          <svg>
                            lock.svg
                          </svg>
                        </div>
                        <span />
                      </span>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
                    >
                      Jane Doe
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render without profiles 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
            <span
              class="text-2xl font-bold"
            >
              Desktop Wallet
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-72"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mx-auto mt-8 max-w-lg md:max-w-xl"
          >
            <h2
              class="mx-4 text-xl font-bold md:text-2xl"
            >
              Select Profile
            </h2>
            <p
              class="text-sm text-theme-secondary-text md:text-base"
            >
              Create a new Profile to get started.
            </p>
            <div
              class="mt-8"
            >
              <div
                class="-my-2.5 flex flex-wrap justify-center"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj w-40 h-40 leading-tight m-2.5 group"
                  data-testid="Card"
                >
                  <div
                    class="flex flex-col justify-center items-center mx-auto h-full"
                  >
                    <div>
                      <div
                        class="Circle-uw7h4j-0 cnQsQi text-theme-primary-600 dark:text-white dark:group-hover:border-theme-secondary-800 dark:group-hover:bg-theme-secondary-800 group-hover:text-white group-hover:bg-theme-primary-700"
                      >
                        <div
                          class="sc-bdfBwQ fdfkzt"
                          height="12"
                          width="12"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <span
                      class="mt-3 font-semibold text-theme-primary-600 dark:text-white max-w-32 truncate dark:group-hover:text-white group-hover:text-theme-primary-700"
                    >
                      Create Profile
                    </span>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
